--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-paystack": "^4.0.3",
     "swiper": "^9.1.1",
     "typescript": "5.0.2"
   }
